--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "testgitrepo"
+    "url": "junkboy0315/react-compare-image"
   },
   "author": "Shota Tamura",
   "license": "MIT",
