--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": ">=15.0.1"
   },
   "dependencies": {
-    "emotion": "^9.1.3",
+    "emotion": "^9.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
