--- a/package.json
+++ b/package.json
@@ -39,5 +39,12 @@
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-serve": "^1.0.2"
-  }
+  },
+  "keywords": [
+    "picture comparison",
+    "image comparison",
+    "slider",
+    "react",
+    "twentytwenty"
+  ]
 }
