--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "React component to compare two images using slider.",
   "main": "dist/bundle.js",
   "scripts": {
-    "build": "del-cli dist/**/* && webpack --config ./webpack.production.config.js",
-    "build-web": "del-cli dist/**/* && cpx public/**/* dist && webpack --config ./webpack.website.config.js",
-    "prepublish": "del-cli dist/**/* && npm run build",
+    "build":
+      "del-cli dist/**/* && webpack --config ./webpack.production.config.js",
+    "build-web":
+      "del-cli dist/**/* && cpx public/**/* dist && webpack --config ./webpack.website.config.js",
+    "prepublishOnly": "del-cli dist/**/* && npm run build",
     "serve": "webpack-serve ./webpack.local.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006 -s ./public",
