--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "react-compare-image",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "React component to compare two images using slider.",
   "main": "dist/bundle.js",
   "scripts": {
-    "build":
-      "del-cli dist/**/* && webpack --config ./webpack.production.config.js",
-    "build-web":
-      "del-cli dist/**/* && cpx public/**/* dist && webpack --config ./webpack.website.config.js",
+    "build": "del-cli dist/**/* && webpack --config ./webpack.production.config.js",
+    "build-web": "del-cli dist/**/* && cpx public/**/* dist && webpack --config ./webpack.website.config.js",
     "prepublishOnly": "del-cli dist/**/* && npm run build",
     "serve": "webpack-serve ./webpack.local.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
