add basic tests

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "del-cli dist/**/* && webpack --config ./webpack.production.config.js",
     "build-web": "del-cli dist/**/* && cpx public/**/* dist && webpack --config ./webpack.website.config.js",
-    "prepublishOnly": "del-cli dist/**/* && npm run build",
+    "prepublishOnly": "npm run test && del-cli dist/**/* && npm run build",
     "serve": "webpack-serve ./webpack.local.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "storybook": "start-storybook -p 6006 -s ./public",
     "build-storybook": "build-storybook"
   },
@@ -31,6 +31,7 @@
     "@storybook/addons": "^3.4.5",
     "@storybook/react": "^3.4.5",
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.2",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -40,8 +41,11 @@
     "cpx": "^1.5.0",
     "css-loader": "^0.28.11",
     "del-cli": "^1.1.0",
+    "enzyme": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.2.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.5.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "style-loader": "^0.21.0",
