--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-compare-image",
-  "version": "0.8.0",
+  "version": "1.0.0",
   "description": "React component to compare two images using slider.",
   "main": "dist/bundle.js",
   "scripts": {
@@ -52,7 +52,7 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
+    "webpack-cli": "3",
     "webpack-dev-server": "^3.1.14"
   },
   "keywords": [
