--- a/package.json
+++ b/package.json
@@ -27,29 +27,28 @@
     "css-element-queries": "^1.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
     "@storybook/addon-actions": "^4.1.13",
     "@storybook/addon-links": "^4.1.13",
     "@storybook/addons": "^4.1.13",
     "@storybook/react": "^4.1.13",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.4.2",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-runtime": "^6.26.0",
+    "babel-jest": "^24.1.0",
+    "babel-loader": "^8.0.5",
     "cpx": "^1.5.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^2.1.0",
     "del-cli": "^1.1.0",
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
-    "file-loader": "^1.1.11",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.5.0",
+    "jest": "^24.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "style-loader": "^0.21.0",
+    "style-loader": "^0.23.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "3",
