--- a/package.json
+++ b/package.json
@@ -38,16 +38,17 @@
     "@storybook/react": "^4.1.13",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0",
     "cpx": "^1.5.0",
     "css-loader": "^2.1.0",
     "del-cli": "^1.1.0",
-    "enzyme": "^3.4.4",
-    "enzyme-adapter-react-16": "^1.2.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
+    "jest-dom": "^3.1.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-testing-library": "^6.0.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
