--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "author": "Shota Tamura",
   "license": "MIT",
   "peerDependencies": {
-    "react": ">16.8",
-    "react-dom": ">16.8"
+    "react": ">=16.8",
+    "react-dom": ">=16.8"
   },
   "dependencies": {
     "css-element-queries": "^1.0.2"
@@ -46,8 +46,8 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "jest-dom": "^3.1.2",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": ">=16.8",
+    "react-dom": ">=16.8",
     "react-testing-library": "^6.0.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.0.1",
