--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -49,6 +49,15 @@
       ]
     },
     {
+      "login": "tasnimAlam",
+      "name": "Md. Tasnim Alam",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/22883823?v=4",
+      "profile": "https://github.com/tasnimAlam",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "janedotbiz",
       "name": "Jane Meredith",
       "avatar_url": "https://avatars2.githubusercontent.com/u/5113432?v=4",
