--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "jest-dom": "^3.1.2",
+    "prettier": "^1.18.2",
     "react": ">=16.8",
     "react-dom": ">=16.8",
     "react-testing-library": "^6.0.0",
