Add @vinyldarkscratch as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -74,6 +74,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "vinyldarkscratch",
+      "name": "Queen Vinyl Darkscratch",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/5179191?v=4",
+      "profile": "http://www.queengoob.org",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
