--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "cpx": "^1.5.0",
     "css-loader": "^3.2.0",
     "del-cli": "^2.0.0",
-    "eslint": "6.1.0",
+    "eslint": "^6.5.1",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-import": "^2.18.2",
@@ -55,7 +55,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
