--- a/package.json
+++ b/package.json
@@ -37,31 +37,31 @@
     "@storybook/addon-storysource": "^5.2.4",
     "@storybook/addons": "^5.1.11",
     "@storybook/react": "^5.1.11",
-    "@testing-library/jest-dom": "^4.1.0",
-    "@testing-library/react": "^9.1.3",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.3",
     "all-contributors-cli": "^6.7.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
+    "babel-jest": "^26.1.0",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
     "del-cli": "^3.0.0",
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb": "18.0.1",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.6.4",
+    "eslint-plugin-jest": "^23.17.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.1.2",
-    "file-loader": "^4.2.0",
-    "jest": "^24.1.0",
+    "eslint-plugin-react-hooks": "^4.0.5",
+    "file-loader": "^6.0.0",
+    "jest": "^26.1.0",
     "loki": "^0.23.0",
-    "prettier": "^1.18.2",
+    "prettier": "^2.0.5",
     "react": ">=16.8",
     "react-dom": ">=16.8",
     "style-loader": "^1.0.0",
-    "url-loader": "^2.1.0",
+    "url-loader": "^4.1.0",
     "webpack": "^4.8.3",
     "webpack-cli": "3"
   },
