--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-dom": ">=16.8"
   },
   "dependencies": {
-    "css-element-queries": "^1.0.2",
-    "prop-types": "^15.7.2"
+    "css-element-queries": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -34,6 +33,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.10.4",
     "@storybook/addon-storysource": "^5.2.4",
     "@storybook/addons": "^5.1.11",
     "@storybook/react": "^5.1.11",
