--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "react": ">=16.8",
     "react-dom": ">=16.8"
   },
-  "dependencies": {
-    "css-element-queries": "^1.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
@@ -40,6 +38,7 @@
     "@storybook/react": "^5.1.11",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
+    "@types/resize-observer-browser": "^0.1.3",
     "all-contributors-cli": "^6.7.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^26.1.0",
