specify browser version to reduce package size

--- a/package.json
+++ b/package.json
@@ -83,5 +83,13 @@
         "mobile": false
       }
     }
-  }
+  },
+  "browserslist": [
+    "last 1 Chrome versions",
+    "last 1 Safari versions",
+    "last 1 Firefox versions",
+    "last 1 Edge versions",
+    "last 1 ChromeAndroid versions",
+    "last 1 iOS versions"
+  ]
 }
