--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: Frontend Test
+name: MyActions
 
 on: [push]
 
@@ -55,7 +55,7 @@ jobs:
           yarn
           yarn loki:test
 
-  firebase-deploy:
+  deploy-to-github-pages:
     runs-on: ubuntu-latest
 
     steps:
@@ -79,8 +79,8 @@ jobs:
       - run: yarn
       - run: yarn build-storybook
 
-      - uses: w9jds/firebase-action@master
+      - name: Deploy to Github pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          args: deploy --only hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./storybook-static
