--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -84,3 +84,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./storybook-static
+          cname: react-compare-image.yuuniworks.com
