--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "author": "Shota Tamura",
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=16.8",
-    "react-dom": ">=16.8"
+    "react": "^16.8 || ^17",
+    "react-dom": "^16.8 || ^17"
   },
   "dependencies": {},
   "devDependencies": {
@@ -58,8 +58,8 @@
     "jest": "^26.1.0",
     "loki": "^0.23.0",
     "prettier": "^2.0.5",
-    "react": ">=16.8",
-    "react-dom": ">=16.8",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "style-loader": "^1.0.0",
     "typescript": "^3.9.6",
     "url-loader": "^4.1.0",
