--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react": "^16.8 || ^17",
     "react-dom": "^16.8 || ^17"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
@@ -36,25 +35,13 @@
     "@storybook/addon-storysource": "^5.2.4",
     "@storybook/addons": "^5.1.11",
     "@storybook/react": "^5.1.11",
-    "@testing-library/jest-dom": "^5.11.0",
-    "@testing-library/react": "^10.4.3",
     "@types/resize-observer-browser": "^0.1.3",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
     "del-cli": "^3.0.0",
-    "eslint": "^7.3.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.17.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^4.0.5",
     "file-loader": "^6.0.0",
-    "jest": "^26.1.0",
     "loki": "^0.23.0",
     "prettier": "^2.0.5",
     "react": "^17.0.1",
@@ -64,6 +51,20 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.8.3",
     "webpack-cli": "3"
+  },
+  "devDependencies": {
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.17.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^4.0.5",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.3",
+    "jest": "^26.1.0"
   },
   "keywords": [
     "picture comparison",
