--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@storybook/react": "^5.1.11",
     "del-cli": "^3.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
