--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-compare-image",
+  "name": "@oro-preco/react-compare-image",
   "version": "3.1.0",
   "description": "React component to compare two images using slider.",
-  "main": "dist/bundle.js",
+  "main": "dist/main.umd.js",
+  "module": "dist/main.es.js",
   "types": "dist/ReactCompareImage.d.ts",
   "scripts": {
-    "build": "del-cli dist/**/* && webpack --config ./webpack.production.config.js && yarn tsc",
-    "prepublishOnly": "yarn test && yarn loki:test && yarn build",
+    "build": "vite build",
     "test": "jest",
     "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006 -s ./public",
@@ -39,6 +39,7 @@
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
     "@types/resize-observer-browser": "^0.1.3",
+    "@vitejs/plugin-react": "^2.1.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.0.5",
@@ -62,6 +63,8 @@
     "style-loader": "^1.0.0",
     "typescript": "^3.9.6",
     "url-loader": "^4.1.0",
+    "vite": "^3.1.0",
+    "vite-plugin-dts": "^1.5.0",
     "webpack": "^4.8.3",
     "webpack-cli": "3"
   },
