--- a/package.json
+++ b/package.json
@@ -25,45 +25,45 @@
     "react": "^16.8 || ^17 || ^18",
     "react-dom": "^16.8 || ^17 || ^18"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jest-environment-jsdom": "^29.3.1"
+  },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.10.4",
-    "@storybook/addon-storysource": "^5.2.4",
-    "@storybook/addons": "^5.1.11",
-    "@storybook/react": "^5.1.11",
+    "@babel/core": "^7.20.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@storybook/react": "^6.5.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/resize-observer-browser": "^0.1.3",
+    "@types/resize-observer-browser": "^0.1.7",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^26.1.0",
-    "babel-loader": "^8.0.5",
+    "babel-jest": "^29.3.1",
+    "babel-loader": "^9.1.0",
     "babel-polyfill": "^6.26.0",
-    "del-cli": "^3.0.0",
-    "eslint": "^7.3.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^23.17.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^4.0.5",
+    "del-cli": "^5.0.0",
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.6",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.0.0",
-    "jest": "^26.1.0",
+    "jest": "^29.3.1",
     "loki": "^0.30.3",
-    "prettier": "^2.0.5",
+    "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "style-loader": "^1.0.0",
-    "typescript": "^3.9.6",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.9.3",
     "url-loader": "^4.1.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "3"
+    "webpack": "^5.75.0",
+    "webpack-cli": "5.0.0"
   },
   "keywords": [
     "picture comparison",
