--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "dist/bundle.js",
   "types": "dist/ReactCompareImage.d.ts",
   "scripts": {
-    "build": "del-cli dist/**/* && webpack --config ./webpack.production.config.js && yarn tsc",
-    "prepublishOnly": "yarn test && yarn loki:test && yarn build",
+    "build": "del-cli dist/**/* && webpack --config ./webpack.production.config.js && pnpm tsc",
+    "prepublishOnly": "pnpm test && pnpm loki:test && pnpm build",
     "test": "jest",
     "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006 -s ./public",
     "build-storybook": "build-storybook",
-    "loki:approve": "yarn loki approve",
-    "loki:test": "build-storybook && yarn loki --chromeDockerImage yukinying/chrome-headless-browser-stable:107.0.5304.121 --chromeFlags=\"--headless --disable-gpu --hide-scrollbars --disable-web-security\" --reactUri file:./storybook-static --requireReference test --chromeTolerance 1",
-    "loki:update-references": "build-storybook && yarn loki --chromeDockerImage yukinying/chrome-headless-browser-stable:107.0.5304.121 --chromeFlags=\"--headless --disable-gpu --hide-scrollbars --disable-web-security\" --reactUri file:./storybook-static update"
+    "loki:approve": "pnpm loki approve",
+    "loki:test": "build-storybook && pnpm loki --chromeDockerImage yukinying/chrome-headless-browser-stable:107.0.5304.121 --chromeFlags=\"--headless --disable-gpu --hide-scrollbars --disable-web-security\" --reactUri file:./storybook-static --requireReference test --chromeTolerance 1",
+    "loki:update-references": "build-storybook && pnpm loki --chromeDockerImage yukinying/chrome-headless-browser-stable:107.0.5304.121 --chromeFlags=\"--headless --disable-gpu --hide-scrollbars --disable-web-security\" --reactUri file:./storybook-static update"
   },
   "repository": {
     "type": "git",
