--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,11 +1,14 @@
-name: MyActions
+name: Run Tests
 
-on: [push]
+on:
+  pull_request:
+    branches:
+      - 'master'
+  workflow_dispatch:
 
 jobs:
   unit-test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
 
@@ -35,7 +38,6 @@ jobs:
 
   visual-regression-test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
 
