--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "react": "^16.8 || ^17 || ^18",
     "react-dom": "^16.8 || ^17 || ^18"
   },
-  "dependencies": {
-    "jest-environment-jsdom": "^29.3.1"
-  },
   "devDependencies": {
     "@babel/core": "^7.20.5",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -55,6 +52,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.0.0",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "loki": "^0.30.3",
     "prettier": "^2.8.0",
     "react": "^18.2.0",
