--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "loki": "^0.30.3",
+    "pnpm": "^8.6.11",
     "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
