--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
   "types": "dist/ReactCompareImage.d.ts",
   "scripts": {
     "build": "del-cli dist/**/* && webpack --config ./webpack.production.config.js && pnpm tsc",
-    "prepublishOnly": "pnpm test && pnpm loki:test && pnpm build",
+    "prepublishOnly": "pnpm test && pnpm build",
     "test": "jest",
     "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook",
-    "loki:approve": "pnpm loki approve",
-    "loki:test": "build-storybook && pnpm loki --chromeDockerImage yukinying/chrome-headless-browser-stable:107.0.5304.121 --chromeFlags=\"--headless --disable-gpu --hide-scrollbars --disable-web-security\" --reactUri file:./storybook-static --requireReference test --chromeTolerance 1",
-    "loki:update-references": "build-storybook && pnpm loki --chromeDockerImage yukinying/chrome-headless-browser-stable:107.0.5304.121 --chromeFlags=\"--headless --disable-gpu --hide-scrollbars --disable-web-security\" --reactUri file:./storybook-static update"
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -55,7 +52,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.0.0",
     "jest": "^29.3.1",
-    "loki": "^0.30.3",
     "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -72,17 +68,6 @@
     "react",
     "twentytwenty"
   ],
-  "loki": {
-    "configurations": {
-      "chrome.laptop": {
-        "target": "chrome.docker",
-        "width": 1366,
-        "height": 768,
-        "deviceScaleFactor": 1,
-        "mobile": false
-      }
-    }
-  },
   "browserslist": [
     "last 1 Chrome versions",
     "last 1 Safari versions",
@@ -90,5 +75,6 @@
     "last 1 Edge versions",
     "last 1 ChromeAndroid versions",
     "last 1 iOS versions"
-  ]
+  ],
+  "packageManager": "pnpm@9.14.0+sha512.100738ce99825e11ad8179a169c8e25ca6b8eea4be329c157f47990581ee7411148de541b4052b6cff4ebf0da3b54a039d879898234e0f84416c2dd27be5a378"
 }
