--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "build": "del-cli dist/**/* && webpack --config ./webpack.production.config.js && pnpm tsc",
     "prepublishOnly": "pnpm test && pnpm build",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook"
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -32,7 +30,6 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@storybook/react": "^6.5.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/resize-observer-browser": "^0.1.7",
