chore: migrate storybook v6 to v8

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "jsx": "react",
     "outDir": "dist"
   },
-  "include": ["src/ReactCompareImage.tsx"]
+  "include": ["src/ReactCompareImage.tsx","src/globals.d.ts"]
 }
