--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "author": "Shota Tamura",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.8 || ^17 || ^18",
-    "react-dom": "^16.8 || ^17 || ^18"
+    "react": "^16.8 || ^17 || ^18 || ^19",
+    "react-dom": "^16.8 || ^17 || ^18 || ^19"
   },
   "dependencies": {
     "jest-environment-jsdom": "^29.3.1"
@@ -61,8 +61,8 @@
     "file-loader": "^6.0.0",
     "jest": "^29.3.1",
     "prettier": "^2.8.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "storybook": "^8.4.7",
     "style-loader": "^3.3.1",
     "typescript": "^4.9.3",
