chore: these libs are still required by storybook

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "react-dom": "^16.8 || ^17 || ^18 || ^19"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
     "@chromatic-com/storybook": "^3.2.6",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-interactions": "^8.6.12",
