--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
+    "@biomejs/biome": "^1.9.4",
     "@chromatic-com/storybook": "^3.2.6",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-interactions": "^8.6.12",
@@ -49,7 +50,8 @@
     "storybook": "^8.6.12",
     "typescript": "^5.8.3",
     "vite": "^6.3.1",
-    "vite-plugin-dts": "^4.5.3"
+    "vite-plugin-dts": "^4.5.3",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "keywords": [
     "picture comparison",
