refactor: apply strict tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "skipLibCheck":true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "strict": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
