refactor: strict tsconfig setting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,15 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "strict": true
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noErrorTruncation": false, // エラーを中略しない
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
