--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,6 @@
     "noImplicitReturns": true,
     "noPropertyAccessFromIndexSignature": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
-  },
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+    "noUnusedParameters": true,
+  }
 }
