--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "vite": "^6.3.1",
     "vite-plugin-dts": "^4.5.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.1",
+    "vitest-browser-react": "^0.1.1"
   },
   "keywords": [
     "picture comparison",
