--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,22 +1,34 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
-  "organizeImports": {
-    "enabled": true
-  },
+  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
     "indentWidth": 2,
-    "ignore": ["**/tsconfig*.json", "package.json", "package-lock.yaml"]
+    "includes": [
+      "**",
+      "!**/tsconfig*.json",
+      "!**/package.json",
+      "!**/package-lock.yaml"
+    ]
   },
   "linter": {
     "enabled": true,
     "rules": {
-      "all": true,
       "style": {
         "useNamingConvention": "off",
         "useFilenamingConvention": "off",
-        "noDefaultExport": "off"
+        "noDefaultExport": "off",
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       },
       "correctness": {}
     }
