--- a/package.json
+++ b/package.json
@@ -34,22 +34,22 @@
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
-    "@biomejs/biome": "^2.2.2",
-    "@storybook/react": "^9.1.3",
-    "@storybook/react-vite": "^9.1.3",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@biomejs/biome": "^2.2.4",
+    "@storybook/react": "^9.1.10",
+    "@storybook/react-vite": "^9.1.10",
+    "@types/node": "^24.6.1",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@types/resize-observer-browser": "^0.1.11",
-    "@vitejs/plugin-react": "^5.0.2",
+    "@vitejs/plugin-react": "^5.0.4",
     "@vitest/browser": "^3.2.4",
     "@vitest/ui": "^3.2.4",
-    "jsdom": "^26.1.0",
-    "playwright": "^1.55.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "storybook": "^9.1.3",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.4",
+    "playwright": "^1.55.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "storybook": "^9.1.10",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.7",
     "vite-plugin-dts": "^4.5.4",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4",
@@ -71,7 +71,7 @@
     "last 1 iOS versions"
   ],
   "volta": {
-    "node": "22.17.0"
+    "node": "24.9.0"
   },
   "dependencies": {
     "tiny-invariant": "^1.3.3"
